# League_of_Idea

./: .env.example  .gitignore  CHANGELOG.md  README.md  pricing.example.json  pyproject.toml  rubric.example.json
docs/: DESIGN_REVIEW.md  RESEARCH_WORKSPACE_PRD.md
skills/league-of-idea/: SKILL.md
skills/league-of-idea/agents/: openai.yaml
skills/league-of-idea/references/: configuration.md  workflows.md
skills/league-of-idea/scripts/: loi.py
src/league_of_idea/: __init__.py  analysis.py  arena_bridge.py  cli.py  connectors.py  dedup.py  elo.py  generator.py  ingest.py  judge.py  llm.py  models.py  pairing.py  paper_service.py  pricing.py  report.py  research.py  rubric.py  runtime.py  storage.py  tournament.py  usage.py  workspace_cli.py  workspace_models.py  workspace_report.py  workspace_storage.py
tests/: test_analysis.py  test_arena_bridge.py  test_cli.py  test_concurrency.py  test_connectors.py  test_dedup.py  test_elo.py  test_generator.py  test_judge.py  test_llm.py  test_pairing.py  test_pricing.py  test_report.py  test_rubric.py  test_runtime.py  test_storage.py  test_tournament.py  test_usage.py  test_workspace.py
